# agentshield

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: action-e2e.yml  ci.yml  docker.yml  release.yml
benches/: scan.rs
docs/: ARCHITECTURE.md  BLOG_POST.md  NEXT_STEPS.md  SCAN_RESULTS.md  VALIDATION_REPORT.md
src/: error.rs  lib.rs
src/adapter/: mcp.rs  mod.rs  openclaw.rs
src/analysis/: capability.rs  mod.rs  supply_chain.rs
src/config/: mod.rs
src/ir/: data_surface.rs  dependency_surface.rs  execution_surface.rs  mod.rs  provenance_surface.rs  tool_surface.rs
src/output/: console.rs  html.rs  json.rs  mod.rs  sarif.rs
src/parser/: json_schema.rs  mod.rs  python.rs  shell.rs  typescript.rs
src/rules/: finding.rs  mod.rs  policy.rs
src/rules/builtin/: arbitrary_file_access.rs  command_injection.rs  credential_exfil.rs  mod.rs  runtime_install.rs  self_modification.rs  ssrf.rs
tests/fixtures/mcp_servers/safe_calculator/: package.json  server.py
tests/fixtures/mcp_servers/vuln_cmd_inject/: package.json  server.py
tests/fixtures/mcp_servers/vuln_cred_exfil/: package.json  server.py
tests/fixtures/mcp_servers/vuln_ssrf/: package.json  server.py
tests/fixtures/mcp_servers/vuln_ts_cmd_inject/: package.json  server.ts
